--- a/style.css
+++ b/style.css
@@ -40,13 +40,14 @@
     width: 550px;
     height: 650px ;
     position: absolute;
-    left: -30px;
+    left: -550px;
     bottom: -10px;
     animation-name: reindeer;
     animation-delay: 5s;
     animation-duration: 8s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    z-index: 1;
 }
 .deer img{
     width: 100%;
