--- a/style.css
+++ b/style.css
@@ -1,104 +1,292 @@
-.christmas {
-    width: 1990px;
-    height: 960px;
+body {
+    background-color: #F7F7F7;
+}
+header {
+    width: 1440px;
+    height: 73px;
+}
+.circle {
+    width: 27px;
+    height: 27px;
+    padding: 23px 27px;
+    display: inline-block;
+}
+.circle img {
+    width: 100%;
+    height: 100%;
+}
+.main-nav {
+    display: inline-block;
+    padding-top: 28px;
+    padding-bottom: 27px;
+    margin-left: 800px;
+}
+.main-nav li {
+    border-right: 2px black solid;
+    display: inline-block;
+    font-family: bold;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 1.2px;
+    padding-left: 18px;
+}
+a {
+    text-decoration: none;
+    color: #000000;
+}
+main {
+    width: 1440px;
+}
+.main-image1 {
+    margin-top: 20px;
+    width: 1440px;
+    height: 700px;
+}
+.main-image1 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.face {
+    width: 33px;
+    height: 33px;
+}
+.colorful {
+    width: 300px;
+    height: 300px;
+}
+.text {
+    display: inline-block;
+}
+.divtext1 {
+    display: inline-block;
+    width: 686px;
+    height: 660px;
+    margin-left: 150px;
+}
+.text1 {
+    width: 686px;
+}
+h1 {
+    font-family: bold;
+    font-size: 30px;
+    letter-spacing: 9px;
+}
+.text {
+    font-family: arial;
+    letter-spacing: 0.88px;
+    color: #262626;
+    font-size: 11px;
+    display: inline-block;
+}
+.textbutton {
+    display: inline-block;
+    margin-left: 25px;
+    height: 18px;
+    width: 126px;
+}
+.button1 {
+    background-color: #0865DE;
+    color: #FFFFFF;
+    border: none;
+    font-family: bold;
+    font-size: 12px;
+    letter-spacing: 1.2px;
+}
+.textbutton1 {
+    display: inline-block;
+    margin-left: 35px;
+    height: 45px;
+    width: 61px;
+}
+.button2 {
+    background-color: #FFFFFF;
+    border: none;
+    color: #000000;
+    font-family: bold;
+    letter-spacing: 1.4px;
+}
+.text1 p {
+    width: 100%;
+}
+.ptext1 {
+    font-family: tisa;
+    font-size: 33px;
+}
+.ptext2 {
+    font-family: tisa;
+    font-size: 25px;
+    color: #434343;
+    letter-spacing: 0px;
+}
+.details1 {
+    font-family: bold;
+    font-size: 14px;
+    letter-spacing: 1.4px;
+}
+.greylink {
+    letter-spacing: 1.44px;
+    color: #959595;
+    opacity: 1;
+    height: 20px;
+    width: 285px;
+    font-family: arial;
+}
+.details1 {
+    display: inline-block;
+    color: #959595;
+}
+.details {
+    display: inline-block;
+    margin-left: 50px;
+    color: #959595;
+}
+.divtext2 {
+    display: inline-block;
+    width: 350px;
+    height: 288px;
+    vertical-align: top;
+    margin-top: 220px;
+    margin-left: 100px;
+    margin-right: 40px;
+    background-color: #FFFFFF;
+  
+}
+.divtext2 h5 {
+    font-family: bold;
+    font-size: 25px;
+    letter-spacing: 5px;
+    color: #262626;
+    opacity: 1;
+    padding-left: 80px;
+    padding-top: 30px;
+}
+.divfacediv {
+    padding-left: 55px;
+}
+.facediv {
+    display: inline-block;
+    margin-left: 15px;
     position: relative;
 }
-.background{
-    width: 100%;
-    height: 100%;
+.facediv img {
+    border-radius: 25px;
 }
-.claus {
-    width: 500px;
-    height: 550px;
+.faceinfo .facediv :hover{
+    background-color: #0865DE;
+    left: -70px;
+    width: 200px;
+    height: 150px;
+    font-family: bold;
+    color: #fff;
+    font-size: 14px;
+    transition-property: all;
+    transition-delay: 1s;
+    transition-duration: 5s;
+    transition-timing-function: linear;
     position: absolute;
-    bottom: 70px;
-    animation-name: santa;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-direction: alternate;
+    display: none;
 }
-.claus img {
+ .facediv .faceinfo:hover{
+    position: absolute;
+    background-color: #0865DE;
+    width: 200px;
+    height: 150px;
+    display: block;
+}
+.main-image2 {
+    margin-top: 20px;
+    width: 1260px;
+    height: 810px;
+    margin-left: 90px;
+    margin-right: 90px;
+}
+.main-image2 img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
+h2 {
+    font-family: bold;
+    letter-spacing: 1.4px;
+    font-size: 14px;
+    color: #000000;
+    opacity: 1;
+    margin-left: 220px;
+    margin-top: 60px;
+    margin-bottom: 40px;
+}
+.allproject {
+    padding-left: 180px;
+    padding-right: 180px;
+}
+.project {
+    display: inline-block;
+    margin-left:40px;
+}
+.viewmore {
+    display: inline-block;
+}
+.svg1 {
+    width: 27px;
+    height: 27px;
+    fill: #0000FF;
+}
+.svg2 {
+    width: 27px;
+    height: 27px;
+    fill: #FF7600;
+}
+.otherproject {
+    width: 176px;
+    height: 48px;
+    padding-left: 686px;
+    padding-right: 665px;
+}
+.otherproject button{
+    background-color: #FF7600;
+}
+.footernav {
+    width: 800px;
+    height: 422px;
+    padding-top: 120px;
+    padding-left: 90px;
+    display: inline-block;
+}
+.footernav div {
+  
+    display: inline-block;
+    width: 180px ;
+    height: 422px;
+}
+.footernav li{
+    list-style: none;
+    font-family: arial;
+    color: #959595;
+    letter-spacing: 0.88px;
+    font-size: 11px;
+    margin-top: 35px;
 
-@keyframes santa {
-    0% {
-        left: 350px;
-        transform: rotate(-20deg);
-    }
-    50% {
-        bottom: 230px;
-    }
-    100%{
-        left:1000px;
-        transform: rotate(20deg);
-    }
 }
-.deer {
-    width: 550px;
-    height: 650px ;
-    position: absolute;
-    left: -550px;
-    bottom: -10px;
-    animation-name: reindeer;
-    animation-delay: 2s;
-    animation-duration: 8s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    z-index: 1;
+.title {
+    font-family: bold;
+    color: #000000;
+    font-size: 18px;
 }
-.deer img{
-    width: 100%;
-    height: 100%;
-}
-@keyframes reindeer {
-    from {
-        left: -150px;
-    }
-    to {
-        left:1900px;
-    }
-}
-.elf {
-    width: 500px;
-    height: 450px;
-    position: absolute;
-    right: 20px;
-    animation-name: elfs;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-direction: alternate;
-}
-.elf img{
-    width: 100%;
-    height: 100%;
-}
+form {
+    display: inline-block;
+    width: 450px;
+    height: 419px;
+    background-color: #FFFFFF;
+    vertical-align: top;
 
-@keyframes elfs {
-    0%{
-        bottom: 10px;
-        right: 30px;
-    }
-    50% {
-        bottom: 75px;
-        right: 5px;
-    }
-    100% {
-        bottom: 60px;
-        right: 50px;
-    }
 }
-svg {
-    position: absolute;
-    bottom: 10px;
-    right: 15px;
-    transition: all 0.4s linear;
+.footertext {
+    display: inline-block;
+    margin-left: 190px;
+    width: 352px;
+    height: 32px;
+    letter-spacing: NaNpx;
+    color: #959595;
+    opacity: 1;
 }
-svg:hover {
-    background-color: #8ebbfd;
-    border-radius: 30px;
-}
- 
